5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4368/executions/1577_579.log
== TEST (2019-04-02 09:53:18) 
-- CODE:
print("a_ufam_tem_110_anos")
-- OUTPUT:
a_ufam_tem_110_anos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:53:48) 
-- CODE:
print("a_ufam_tem_110_anos_de_fundacao")
-- EXECUTION TIME:
0.141698
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
a_ufam_tem_110_anos_de_fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:54:16) 
-- CODE:
print("a ufam tem 110 anos de fundacao")
-- EXECUTION TIME:
0.13834
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
a ufam tem 110 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:58:23) 
-- CODE:
print(a ufam tem,2019-1909,anos de fundacao)
-- EXECUTION TIME:
0.135919
-- ERROR:
  File "/home/codebench/codes/1577/579/main.py", line 1
    print(a ufam tem,2019-1909,anos de fundacao)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:58:42) 
-- CODE:
print(a ufam tem,110 anos de fundacao)
-- EXECUTION TIME:
0.173837
-- ERROR:
  File "/home/codebench/codes/1577/579/main.py", line 1
    print(a ufam tem,110 anos de fundacao)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:00:17) 
-- CODE:
print(a ufam tem,2019-1909 anos de fundacao)
print(a ufam tem,110 anos de fundacao)
-- EXECUTION TIME:
0.395987
-- ERROR:
  File "/home/codebench/codes/1577/579/main.py", line 1
    print(a ufam tem,2019-1909 anos de fundacao)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
